[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tileset/chest_full_open_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://assets/tileset/chest_full_open_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://assets/tileset/chest_full_open_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://src/Items/Chest.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/chest_open.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Items/RedPotion.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "opening",
"speed": 3.0
} ]

[node name="Chest" type="Area2D"]
visible = false
collision_layer = 4
collision_mask = 2147483649
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 2 )
animation = "opening"

[node name="RedPotion" parent="." instance=ExtResource( 6 )]

[node name="OpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Effects"
[connection signal="body_entered" from="." to="." method="_on_Chest_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="is_grabbed" from="RedPotion" to="." method="_on_RedPotion_is_grabbed"]
